# ECGCore

./: CMakeLists.txt  README.md
src/: component.cpp  component.h  config.cpp  config.h  ecg.cpp  ecg.h  entity.cpp  entity.h  global.h
src/internal/: entity.h
